Replace snow NaNs with average

--- a/Fill_weather_nan.ipynb
+++ b/Fill_weather_nan.ipynb
@@ -569,12 +569,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "new.to_csv('datasets/master.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_snow(df, row):\n",
+    "    for column in ['SNOW', 'SNOWDepth']:\n",
+    "        if np.isnan(row[column]):\n",
+    "            row[column] = df[df['CDC Week'] == row['CDC Week']][column].mean()\n",
+    "    return row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new2 = new.apply(lambda x: fill_snow(new, x), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "County                               0\n",
+       "year                                 0\n",
+       "CDC Week                             0\n",
+       "FIPS                                 0\n",
+       "County Centroid                      0\n",
+       "Week Ending Date                     0\n",
+       "Count                                0\n",
+       "Disease_INFLUENZA_A                  0\n",
+       "Disease_INFLUENZA_B                  0\n",
+       "Disease_INFLUENZA_UNSPECIFIED        0\n",
+       "UnempRate                         1550\n",
+       "GDP                              12648\n",
+       "GDP_change                       14694\n",
+       "Population                        2294\n",
+       "flu                               1488\n",
+       "fluSymptoms                       1488\n",
+       "fever                             1488\n",
+       "cough                             1488\n",
+       "soreThroat                        1488\n",
+       "Target                             124\n",
+       "VaxRate                          10540\n",
+       "PRCP                                 0\n",
+       "SNOW                                 0\n",
+       "TAVG                                 0\n",
+       "TMAX                                 0\n",
+       "TMIN                                 0\n",
+       "SNOWDepth                            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new2.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
