--- a/IO_pred_model.ipynb
+++ b/IO_pred_model.ipynb
@@ -29,6 +29,7 @@
         "import sklearn\n",
         "from sklearn import metrics\n",
         "import matplotlib.pyplot as plt\n",
+        "import copy\n",
         "%matplotlib inline"
       ],
       "execution_count": 0,
@@ -384,7 +385,11 @@
       "metadata": {
         "id": "8odVxQYa4Lpo",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        },
+        "outputId": "17d6bff0-922f-438a-aecc-aac7a284ccb4"
       },
       "source": [
         "#Divide into features and dependent variable \n",
@@ -399,8 +404,22 @@
         "X_train_scaled = mm_scaler.fit_transform(X_train)\n",
         "X_test_scaled = mm_scaler.transform(X_test)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "year         0\n",
+            "CDC Week     0\n",
+            "Count        0\n",
+            "PRCP         0\n",
+            "TAVG         0\n",
+            "SNOWDepth    0\n",
+            "dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -565,9 +584,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 55
+          "height": 74
         },
-        "outputId": "07589529-1278-4b9f-c286-7e2bd1c6e24f"
+        "outputId": "ae6cb433-13cf-4244-ca4f-1bc9aebac689"
       },
       "source": [
         "min_samples_split_values = [int(i) for i in np.logspace(1, 12, num=10, base=2)]\n",
@@ -602,14 +621,16 @@
         "\n",
         "#To get the best test score\n",
         "maximum = max(res, key=res.get)\n",
-        "print(maximum, res[maximum])"
+        "print(maximum, res[maximum])\n",
+        "print(\"min sample leaf value = {}, sample split value = {} for the best R2 score = {}\" .format(s ,res[maximum].index(max(res[maximum])) , max(res[maximum])))"
       ],
-      "execution_count": 100,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "25 [0.7167107689604119, 0.7289362862486134, 0.7335152690134374, 0.6180643731889974, 0.6674482236785029, 0.6168890462797654, 0.604702530640638, 0.4942642630221602, 0.34046686510571067, 0.14501222302172168]\n"
+            "25 [0.7159280182025657, 0.7289345413547543, 0.7335155610539643, 0.6180643460415254, 0.6674482200803001, 0.6168890462797654, 0.604702530640638, 0.4942642630221602, 0.34046686510571067, 0.14501222302172168]\n",
+            "min sample leaf value = 4096, sample split value = 2 for the best R2 score = 0.7335155610539643\n"
           ],
           "name": "stdout"
         }
@@ -624,25 +645,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "2cebdbde-570b-481e-9c9e-53186c3546db"
+        "outputId": "5a8a4e60-b7e8-48ce-df07-a65f4114003a"
       },
       "source": [
         "#To get train value corresponding to best test result\n",
-        "train_res[maximum][res[maximum].index(max(res[maximum]))]"
+        "print(\"Train R2 score corresponding to best test result = \" ,train_res[maximum][res[maximum].index(max(res[maximum]))] * 100)"
       ],
-      "execution_count": 104,
+      "execution_count": 171,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.8388349800678919"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 104
+          "output_type": "stream",
+          "text": [
+            "Train R2 score corresponding to best test result =  83.8834980067892\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -739,9 +755,121 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_0G8hxiGPiNz",
+        "colab_type": "text"
+      },
+      "source": [
+        "K fold Cross Validation"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "yR3GaAHX1vL_",
+        "id": "hkZkZThBPuY3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 199
+        },
+        "outputId": "701d443c-c604-44d4-e83a-7057921d83b6"
+      },
+      "source": [
+        "n_splits = 5\n",
+        "tscv = sklearn.model_selection.TimeSeriesSplit(n_splits=n_splits)\n",
+        "split_number = 0\n",
+        "best_r2 = 0\n",
+        "r2_score_cv = []\n",
+        "for train_index, test_index in tscv.split(X):\n",
+        "  split_number += 1\n",
+        "  #print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
+        "  X_train_cv, X_test_cv = X.iloc[train_index], X.iloc[test_index]\n",
+        "  y_train_cv, y_test_cv = y.iloc[train_index], y.iloc[test_index]\n",
+        "\n",
+        "  mm_scaler = sklearn.preprocessing.MinMaxScaler()\n",
+        "  X_train_cv_scaled = mm_scaler.fit_transform(X_train_cv)\n",
+        "  X_test_cv_scaled = mm_scaler.transform(X_test_cv)\n",
+        "\n",
+        "  model_rf = sklearn.ensemble.RandomForestRegressor(n_estimators = 500)\n",
+        "  model_rf.fit(X_train_cv_scaled, y_train_cv)\n",
+        "  y_train_pred_randomForest = model_rf.predict(X_test_cv_scaled)\n",
+        "  Test_r2_score_randomForest = metrics.r2_score(y_test_cv, y_train_pred_randomForest)\n",
+        "  print(\"R2 Score for Random Forest on testing data = {} for split number = {}\" .format(Test_r2_score_randomForest * 100, split_number))\n",
+        "\n",
+        "  y_train_pred_randomForest = model_rf.predict(X_train_cv_scaled)\n",
+        "  Train_r2_score_randomForest = metrics.r2_score(y_train_cv, y_train_pred_randomForest)\n",
+        "  print(\"R2 Score for Random Forest on training data = {} for split number = {}\" .format(Train_r2_score_randomForest * 100, split_number))\n",
+        "\n",
+        "  r2_score_cv.append(Test_r2_score_randomForest)\n",
+        "\n",
+        "  if Test_r2_score_randomForest > best_r2:\n",
+        "    best_r2 = Test_r2_score_randomForest\n",
+        "    best_split_model = copy.deepcopy(model_rf)\n",
+        "    best_split_X_train = X_train_cv.copy()\n",
+        "    best_split_X_test = y_train_cv.copy()"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "R2 Score for Random Forest on testing data = 66.1482926701509 for split number = 1\n",
+            "R2 Score for Random Forest on training data = 94.96276223591997 for split number = 1\n",
+            "R2 Score for Random Forest on testing data = 63.22549775231816 for split number = 2\n",
+            "R2 Score for Random Forest on training data = 95.84000767662391 for split number = 2\n",
+            "R2 Score for Random Forest on testing data = 73.11375592855 for split number = 3\n",
+            "R2 Score for Random Forest on training data = 97.34975880057601 for split number = 3\n",
+            "R2 Score for Random Forest on testing data = 88.10539471939751 for split number = 4\n",
+            "R2 Score for Random Forest on training data = 97.53982412207486 for split number = 4\n",
+            "R2 Score for Random Forest on testing data = 76.10542465182424 for split number = 5\n",
+            "R2 Score for Random Forest on training data = 98.12048322306666 for split number = 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SVsiwT1dP3EL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 295
+        },
+        "outputId": "6d812443-3d14-4af9-e589-ea0a90549035"
+      },
+      "source": [
+        "y_pos = np.arange(n_splits)\n",
+        "plt.bar(y_pos,r2_score_cv, align='center', alpha=0.5)\n",
+        "plt.xticks(y_pos,range(n_splits))\n",
+        "plt.ylabel('R2 Score')\n",
+        "plt.xlabel('Splits')\n",
+        "plt.title('R2 Score Cross Validation')\n",
+        "\n",
+        "plt.show()"
+      ],
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEWCAYAAABrDZDcAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAAXAElEQVR4nO3debRlZX3m8e9DAYLNpFJGGaQcQK2Q\nAFqCNiuKChFQwY4uBEcUxWQFlTgF1MZIG41Di62S1SGioCYgapZdsTHEKGgGQApxSIHQFRApHCiQ\n0QEEfv3H3kUOl3Nv3YK7z4F6v5+1zmIP73nPb99bnOe8e+/z3lQVkqR2bTTtAiRJ02UQSFLjDAJJ\napxBIEmNMwgkqXEGgSQ1ziCQNjBJTknynn7595JcOp+29/K1bknymHv7fN0/GASaVZIfJvlV/z/7\nT/s3jS1G9r81yb8nuTnJFUneuo7+jkjyg779z5KcmWTL4Y9kbkn27Gu5IcnPk3wryaumVMtTk/xi\n9Oc8su+iJEetT39V9c9V9fgFqu2cJK+Z0f8WVXX5QvSv6TEItC7Pr6otgN2BPYBjR/YFeAXwEGB/\n4Kgkh47rJMkzgPcCh1XVlsATgc8tZKFJNr4Xz3ka8HXgG8DjgIcBfwQcsFCvsT6q6jxgNfCiGa+7\nK7AUOG3I11ebDALNS1X9FDiLLhDWbvtAVX27qm6vqkuB/wPsPUsXTwHOraqL+uf+vKpOraqbAZJs\nnuR/JrkyyY1J/iXJ5v2+g5Ks7D+xn5PkiWs77Uctf5rke8AvkmycZLskX0yyph+pvGGOQ/sgcGpV\nvb+qrq3OhVV1SN//PklW96/xU+BT/fbXJlnVjyCWJ9mu354kJyS5JslNSb7fv4mT5MAkF/cjoquT\nvGWWmk6lC9hRrwDOrKrr+r4+34/SbkzyzSS/Pa6jtfWPrO+R5Nt9DZ8DNhvZ95AkX+5/btf3yzv0\n+/4c+D3g4/0I8eP99kryuH556ySf7p9/ZZJ3Jtmo33d4/zv9UN/3FUnGhq0mzyDQvPRvCAcAq2bZ\nH7o3ipWzdHE+8Jwk706yd5IHzdj/IeDJwH8FHgq8DbgzyS50n4KPBhYDZwJ/n2TTkeceBjwX2Aa4\nE/h74LvA9sCzgaOTPGdMzQ8GngZ8Ye6j5xF9TTsBRyZ5FvA+4BDgkcCVwOl9298Hng7sAmzdt7mu\n33cy8Lp+RLQr3UhknM8AT0+yY1/nRsBL6AJira8AOwMPB74N/M06joH+Z/alvv+HAp8HXjjSZCO6\noNsJeBTwK+DjAFX1DuCfgaP600HjTlF9rD/mxwDPoAuv0VNsewGXAtsCHwBO7v/daNqqyoePsQ/g\nh8AtwM1AAV8Dtpml7bvp3nwfNEd/B9C9Sd/Q9/thYBHdG9CvgN3GPOe/A2eMrG8EXA3sM1Ljq0f2\n7wX8aEYfxwKfGtP39v1xPWGOmvcBbgM2G9l2MvCBkfUtgN8AS4BnAZcBTwU2mtHXj4DXAVvN42f/\nT8Db++X9gDXAJrO03aY/jq379VOA94zUv7pffjrwYyAjz/23tW3H9Ls7cP3I+jnAa2a0KbpTaov6\nn9PSkX2vA87plw8HVo3se3D/3EdM+9+5j3JEoHV6QXWfYPcBnkD3ae5u+guYrwCeW1W3ztZRVX2l\nqp5P92n0YLo3h9f0fW4G/MeYp21H94l7bR93AlfRvYmvddXI8k7Adv1ppBuS3AC8HfitMX1fTzeC\neORsNffWVNWv56jpFrpP/dtX1dfpPkWfCFyT5KQkW/VNXwgcCFyZ5Bv99YnZnAq8vF9+OXB6Vf0G\nIMmiJH+R5D+S3EQXhjDmdzPDdsDV1b8T9+46jiQPTvJX/Wmdm4BvAtskWbSOfte+9iaj/fXLo7+n\nn65dqKpf9ov3uCiuyTMINC9V9Q26T5ofGt2e5NXAMcCzq2r1mKeO6+vOqvoa3amRXYFrgV8Djx3T\n/Md0b+5rXy/AjnSjgru6HFm+CriiqrYZeWxZVQeOqeOXwLnc/fTI2JLXUdN/obvIfHXf70er6sl0\nF3d3Ad7ab7+gqg6mO53zJeCMOV7z74AdkjwT+APuflroJXRBui/dqZgla0tZx3H8BNh+xumYR40s\nvxl4PLBXVW1FN4IY7XeuqYqvpRsV7TSy7VHc/fek+ymDQOvjI8B+SXYDSPJSujuB9qt13EKY5OAk\nh/YXJJNkT7rzyOf1n/I/CXy4v9C7KMnT+usIZwDPTfLsJJvQvVndSndKY5xvATf3F3c37/vaNclT\nZmn/NuDwdLfCPqyvdbckp8/SHrprFq9Ksntf43uB86vqh0mekmSvvtZf0AXcnUk2TfLSJFv3n+xv\nohuNjFVVv6C7dvEp4MqqWjGye8v+Z3Ad3SmW985R66hzgduBNyTZJMkfAHvO6PdXwA1JHgq8a8bz\nf0Z3/n9cvXfQ/a7+PMmWSXYC3gR8dp61aYoMAs1bVa0BPg0c1296D90n4Qv6O0luSfK/Z3n69cBr\ngf9H9yb4WeCDVbX2IudbgO8DFwA/B95Pd479UuBldBcirwWeT3dL622z1HgH8Dy689tX9M/5BN0n\n53Ht/43uvP6zgMuT/Bw4ie6i9Gw/h3+iu3bxRbpP2Y8F1t42uxXw1/3xXkn3Zv3Bft/LgR/2p13+\nEHjpbK/RO5XuE/anZ2z/dN/31cDFwHnr6Gdt3bfRjS4Op/sZv5hu5LHWR4DN6X5m5wH/MKOL/wW8\nqL/r56NjXuL1dOF3OfAvwN/SBbzu53L304WSpNY4IpCkxhkEktQ4g0CSGmcQSFLjBp1Aawjbbrtt\nLVmyZNplSNIDyoUXXnhtVS0et+8BFwRLlixhxYoV624oSbpLkitn2+epIUlqnEEgSY0zCCSpcQaB\nJDXOIJCkxhkEktQ4g0CSGmcQSFLjDAJJatwD7pvFktbfCV+9bNolLIg/2W+XaZewQXJEIEmNMwgk\nqXEGgSQ1ziCQpMYZBJLUOINAkhpnEEhS4wwCSWqcQSBJjTMIJKlxBoEkNc4gkKTGGQSS1DiDQJIa\nZxBIUuMGDYIk+ye5NMmqJMeM2f+oJGcnuSjJ95IcOGQ9kqR7GiwIkiwCTgQOAJYChyVZOqPZO4Ez\nqmoP4FDgL4eqR5I03pAjgj2BVVV1eVXdBpwOHDyjTQFb9ctbAz8esB5J0hhDBsH2wFUj66v7baP+\nDHhZktXAmcDrx3WU5MgkK5KsWLNmzRC1SlKzpn2x+DDglKraATgQ+EySe9RUVSdV1bKqWrZ48eKJ\nFylJG7Ihg+BqYMeR9R36baOOAM4AqKpzgc2AbQesSZI0w5BBcAGwc5JHJ9mU7mLw8hltfgQ8GyDJ\nE+mCwHM/kjRBgwVBVd0OHAWcBVxCd3fQyiTHJzmob/Zm4LVJvgucBhxeVTVUTZKke9p4yM6r6ky6\ni8Cj244bWb4Y2HvIGiRJc5v2xWJJ0pQZBJLUOINAkho36DUCSZq2E7562bRLWDB/st8ug/TriECS\nGmcQSFLjDAJJapxBIEmNMwgkqXEGgSQ1zttH1QRvIZRm54hAkhpnEEhS4wwCSWqcQSBJjTMIJKlx\nBoEkNc4gkKTGGQSS1DiDQJIaZxBIUuMMAklqnEEgSY0zCCSpcQaBJDXOIJCkxjX19wick16S7skR\ngSQ1ziCQpMYZBJLUOINAkhpnEEhS4wwCSWpcU7ePtm5DuX3WW2elheWIQJIaZxBIUuMMAklqnEEg\nSY0bNAiS7J/k0iSrkhwzS5tDklycZGWSvx2yHknSPQ1211CSRcCJwH7AauCCJMur6uKRNjsDxwJ7\nV9X1SR4+VD2SpPGGHBHsCayqqsur6jbgdODgGW1eC5xYVdcDVNU1A9YjSRpjyCDYHrhqZH11v23U\nLsAuSf41yXlJ9h/XUZIjk6xIsmLNmjUDlStJbZr2xeKNgZ2BfYDDgL9Oss3MRlV1UlUtq6plixcv\nnnCJkrRhGzIIrgZ2HFnfod82ajWwvKp+U1VXAJfRBYMkaUKGDIILgJ2TPDrJpsChwPIZbb5ENxog\nybZ0p4ouH7AmSdIMgwVBVd0OHAWcBVwCnFFVK5Mcn+SgvtlZwHVJLgbOBt5aVdcNVZMk6Z4GnXSu\nqs4Ezpyx7biR5QLe1D8kSVMw7YvFkqQpMwgkqXEGgSQ1ziCQpMYZBJLUOINAkhq3ziBI8ltJTk7y\nlX59aZIjhi9NkjQJ8xkRnEL3xa/t+vXLgKOHKkiSNFnzCYJtq+oM4E646xvDdwxalSRpYuYTBL9I\n8jCgAJI8Fbhx0KokSRMznykm3kQ3Wdxjk/wrsBh40aBVSZImZs4gSLIRsBnwDODxQIBLq+o3E6hN\nkjQBcwZBVd2Z5MSq2gNYOaGaJEkTNJ9rBF9L8sIkGbwaSdLEzScIXgd8HrgtyU1Jbk5y08B1SZIm\nZJ0Xi6tqy0kUIkmajnn9YZr+L4o9vV89p6q+PFxJkqRJms8UE38BvBG4uH+8Mcn7hi5MkjQZ8xkR\nHAjsXlV3AiQ5FbgIOHbIwiRJkzHf2Ue3GVneeohCJEnTMZ8RwfuAi5KcTfeFsqcDxwxalSRpYuZz\n19BpSc4BntJv+tOq+umgVUmSJmY+F4v/G/DLqlpeVcuBXyd5wfClSZImYT7XCN5VVXfNNlpVNwDv\nGq4kSdIkzScIxrWZ1/cPJEn3f/MJghVJPpzksf3jBODCoQuTJE3GfILg9cBtwOf6x6+BPx6yKEnS\n5MznrqFf0N8umuQhwA1VVUMXJkmajFlHBEmOS/KEfvlBSb4OrAJ+lmTfSRUoSRrWXKeGXgxc2i+/\nsm/7cLq/VvbegeuSJE3IXEFw28gpoOcAp1XVHVV1Cd41JEkbjLmC4NYkuyZZDDwT+MeRfQ8etixJ\n0qTM9cn+jcAXgMXACVV1BUCSA+lmH5UkbQBmDYKqOh94wpjtZwJnDlmUJGly5jsNtSRpA2UQSFLj\nDAJJatycQZBkqySPHbP9d4crSZI0SXN9s/gQ4AfAF5OsTPKUkd2nzKfzJPsnuTTJqiSz/lWzJC9M\nUkmWzbdwSdLCmGtE8HbgyVW1O/Aq4DP9H6mB7k9WzinJIuBE4ABgKXBYkqVj2m1Jd6vq+etZuyRp\nAcwVBIuq6icAVfUtui+VvTPJG4D5TDq3J7Cqqi6vqtuA04GDx7T7H8D76WY1lSRN2FxBcPPo9YE+\nFPahezP/7Xn0vT1w1cj66n7bXZI8Cdixqv7vXB0lOTLJiiQr1qxZM4+XliTN11xB8Ecz91fVzcD+\nwKvv6wsn2Qj4MPDmdbWtqpOqallVLVu8ePF9fWlJ0oi5vln83Vl23THPvq8GdhxZ36HfttaWwK7A\nOUkAHgEsT3JQVa2Y52tIku6jue4a2irJsUk+nuT303k9cDlwyDz6vgDYOcmjk2wKHAosX7uzqm6s\nqm2raklVLQHOAwwBSZqwuSad+wxwPXAu8Bq6u4gCvKCqvrOujqvq9iRHAWcBi4BPVtXKJMcDK6pq\n+dw9SJImYa4geExV/Q5Akk8APwEeVVXzvrtn3AR1VXXcLG33mW+/kqSFM9fF4t+sXaiqO4DV6xMC\nkqQHhrlGBLslualfDrB5vx6gqmqrwauTJA1urruGFk2yEEnSdDj7qCQ1ziCQpMYZBJLUOINAkhpn\nEEhS4wwCSWqcQSBJjTMIJKlxBoEkNc4gkKTGGQSS1DiDQJIaZxBIUuMMAklqnEEgSY0zCCSpcQaB\nJDXOIJCkxhkEktQ4g0CSGmcQSFLjDAJJapxBIEmNMwgkqXEGgSQ1ziCQpMYZBJLUOINAkhpnEEhS\n4wwCSWqcQSBJjTMIJKlxBoEkNc4gkKTGGQSS1LhBgyDJ/kkuTbIqyTFj9r8pycVJvpfka0l2GrIe\nSdI9DRYESRYBJwIHAEuBw5IsndHsImBZVf0u8AXgA0PVI0kab8gRwZ7Aqqq6vKpuA04HDh5tUFVn\nV9Uv+9XzgB0GrEeSNMaQQbA9cNXI+up+22yOAL4ybkeSI5OsSLJizZo1C1iiJOl+cbE4ycuAZcAH\nx+2vqpOqallVLVu8ePFki5OkDdzGA/Z9NbDjyPoO/ba7SbIv8A7gGVV164D1SJLGGHJEcAGwc5JH\nJ9kUOBRYPtogyR7AXwEHVdU1A9YiSZrFYEFQVbcDRwFnAZcAZ1TVyiTHJzmob/ZBYAvg80m+k2T5\nLN1JkgYy5KkhqupM4MwZ244bWd53yNeXJK3b/eJisSRpegwCSWqcQSBJjTMIJKlxBoEkNc4gkKTG\nGQSS1DiDQJIaZxBIUuMMAklqnEEgSY0zCCSpcQaBJDXOIJCkxhkEktQ4g0CSGmcQSFLjDAJJapxB\nIEmNMwgkqXEGgSQ1ziCQpMYZBJLUOINAkhpnEEhS4wwCSWqcQSBJjTMIJKlxBoEkNc4gkKTGGQSS\n1DiDQJIaZxBIUuMMAklqnEEgSY0zCCSpcQaBJDXOIJCkxg0aBEn2T3JpklVJjhmz/0FJPtfvPz/J\nkiHrkSTd02BBkGQRcCJwALAUOCzJ0hnNjgCur6rHAScA7x+qHknSeEOOCPYEVlXV5VV1G3A6cPCM\nNgcDp/bLXwCenSQD1iRJmmHjAfveHrhqZH01sNdsbarq9iQ3Ag8Drh1tlORI4Mh+9ZYklw5S8cLZ\nlhnHsNDeNGTn943HPrCWj7/lY4f7fPw7zbZjyCBYMFV1EnDStOuYryQrqmrZtOuYBo+9zWOHto//\ngX7sQ54auhrYcWR9h37b2DZJNga2Bq4bsCZJ0gxDBsEFwM5JHp1kU+BQYPmMNsuBV/bLLwK+XlU1\nYE2SpBkGOzXUn/M/CjgLWAR8sqpWJjkeWFFVy4GTgc8kWQX8nC4sNgQPmNNYA/DY29Xy8T+gjz1+\nAJektvnNYklqnEEgSY0zCBbQuqbU2JAl+WSSa5L8+7RrmbQkOyY5O8nFSVYmeeO0a5qUJJsl+VaS\n7/bH/u5p1zQNSRYluSjJl6ddy71hECyQeU6psSE7Bdh/2kVMye3Am6tqKfBU4I8b+t3fCjyrqnYD\ndgf2T/LUKdc0DW8ELpl2EfeWQbBw5jOlxgarqr5Jd+dXc6rqJ1X17X75Zro3hO2nW9VkVOeWfnWT\n/tHUHShJdgCeC3xi2rXcWwbBwhk3pUYTbwb6T/0MunsA50+3ksnpT4t8B7gG+GpVNXPsvY8AbwPu\nnHYh95ZBIC2QJFsAXwSOrqqbpl3PpFTVHVW1O93sAXsm2XXaNU1KkucB11TVhdOu5b4wCBbOfKbU\n0AYqySZ0IfA3VfV3065nGqrqBuBs2rpWtDdwUJIf0p0OflaSz063pPVnECyc+UypoQ1QP3X6ycAl\nVfXhadczSUkWJ9mmX94c2A/4wXSrmpyqOraqdqiqJXT/z3+9ql425bLWm0GwQKrqdmDtlBqXAGdU\n1crpVjU5SU4DzgUen2R1kiOmXdME7Q28nO7T4Hf6x4HTLmpCHgmcneR7dB+GvlpVD8hbKFvmFBOS\n1DhHBJLUOINAkhpnEEhS4wwCSWqcQSBJjTMIpFkkeUc/o+b3+ltC95qj7Z8leUu/fHySffvlo5M8\neFI1S/fGYH+qUnogS/I04HnAk6rq1iTbApvO57lVddzI6tHAZ4FfLnyV0sIwCKTxHglcW1W3AlTV\ntQD9VAJn0E03/ivgJVW1avSJSU4Bvgxs1z/OTnItsC/dN5CX0c3Q+cmqOmESByPNxVND0nj/COyY\n5LIkf5nkGSP7bqyq3wE+Tjfz5FhV9VHgx8Azq+qZdPP1b19Vu/bP/9SA9UvzZhBIY/Rz7D8ZOBJY\nA3wuyeH97tNG/vu09ej2cuAxST6WZH+gmRlKdf/mqSFpFlV1B3AOcE6S7wOvXLtrtNl69Hd9kt2A\n5wB/CBwCvHphqpXuPUcE0hhJHp9k55FNuwNX9ssvHvnvuevo6mZgy77PbYGNquqLwDuBJy1cxdK9\n54hAGm8L4GP9FMu3A6voThM9D3hIP9vmrcBh6+jnJOAfkvyY7g6iTyVZ+wHs2EEql9aTs49K66G/\na2jZ2ruIpA2Bp4YkqXGOCCSpcY4IJKlxBoEkNc4gkKTGGQSS1DiDQJIa9/8BQ/urh8Bx6b0AAAAA\nSUVORK5CYII=\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IizYZ3HrdtUY",
         "colab_type": "code",
         "colab": {}
       },
